# task-local

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: basic_usage.rs  embassy_compatibility.rs  embassy_example.rs  embassy_minimal.rs  embassy_real.rs  no_std.rs  no_std_basic.rs
src/: lib.rs  no_std.rs  tests.rs
tests/: task_local_tests.rs
