[package]
name = "task-local"
version = "0.1.0"
edition = "2021"
description = "Task-local storage for asynchronous tasks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BugenZhao/task-local"
documentation = "https://docs.rs/task-local"
readme = "README.md"
keywords = ["async", "task", "local", "storage"]
categories = ["asynchronous", "concurrency"]

[features]
default = ["std"]
std = []
error-trait = ["std"]

[dependencies]
pin-project-lite = "0.2.9"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Embassy dependencies for real Embassy executor test
embassy-executor = { version = "0.5.0", features = ["arch-std", "executor-thread", "task-arena-size-32768"] }
embassy-time = { version = "0.3.0", features = ["std", "generic-queue"] }
